# proda

backend/: package.json
mcp-study/: NOTES.txt
mcp-study/mcp_anthropic/: main.py  mcp_chatbot.py  mcp_server.py  pyproject.toml
mcp-study/mcp_chat/: main.py  pyproject.toml  servers_config.json  test.db
mcp-study/mcp_py_sdk/: demo_client.py  demo_server.py  main.py  pyproject.toml
