[project]
name = "mcp-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.1"
dependencies = [
    "anthropic>=0.52.1",
    "arxiv>=2.2.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.9.1",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.1.0",
]
